Add Author for App

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "the-washer-backend",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Adham Aly",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
