--- a/package.json
+++ b/package.json
@@ -22,51 +22,64 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^6.5.4",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^9.0.0",
-    "@nestjs/mongoose": "^9.2.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/platform-socket.io": "^9.2.1",
-    "@nestjs/schedule": "^2.1.0",
-    "@nestjs/websockets": "^9.2.1",
+    "@nestjs/common": "10.2.4",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "10.2.4",
+    "@nestjs/event-emitter": "2.0.2",
+    "@nestjs/jwt": "10.2.0",
+    "@nestjs/mongoose": "10.0.1",
+    "@nestjs/passport": "10.0.1",
+    "@nestjs/platform-express": "10.2.4",
+    "@nestjs/platform-socket.io": "^10.2.4",
+    "@nestjs/schedule": "4.0.0",
+    "@nestjs/swagger": "7.1.10",
+    "@nestjs/websockets": "^10.2.4",
+    "axios": "^1.5.0",
     "bcrypt": "^5.1.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.13.2",
     "dotenv": "^16.0.3",
     "firebase-admin": "^11.2.0",
-    "mongoose": "^6.6.5",
+    "google-auth-library": "8.8.0",
+    "joi": "^17.9.2",
+    "mongoose": "7.0.3",
     "multer": "^1.4.5-lts.1",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "socket.io": "^4.5.4"
+    "passport": "0.6.0",
+    "passport-jwt": "4.0.0",
+    "passport-local": "^1.0.0",
+    "reflect-metadata": "0.1.13",
+    "rimraf": "3.0.2",
+    "rxjs": "7.2.0",
+    "socket.io": "^4.5.4",
+    "stripe": "^14.12.0",
+    "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/cron": "^2.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "28.1.8",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.1.3",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.8",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4"
+    "@nestjs/cli": "10.1.17",
+    "@nestjs/schematics": "10.0.2",
+    "@nestjs/testing": "10.2.4",
+    "@types/express": "4.17.13",
+    "@types/jest": "28.1.4",
+    "@types/multer": "^1.4.11",
+    "@types/node": "18.0.0",
+    "@types/nodemailer": "^6.4.8",
+    "@types/supertest": "2.0.11",
+    "@typescript-eslint/eslint-plugin": "6.5.0",
+    "@typescript-eslint/parser": "6.5.0",
+    "eslint": "8.0.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-filename-rules": "1.3.1",
+    "eslint-plugin-prettier": "4.0.0",
+    "husky": "8.0.3",
+    "jest": "28.1.2",
+    "lint-staged": "13.2.0",
+    "prettier": "2.3.2",
+    "source-map-support": "0.5.20",
+    "supertest": "6.1.3",
+    "ts-jest": "28.0.5",
+    "ts-loader": "9.2.3",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.2.0"
   },
   "jest": {
     "moduleFileExtensions": [
